add garbage collector